--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
-  "name": "React-Tic-Tac-Toe",
-  "version": "0.1.0",
-  "description": "",
-  "scripts": {
-    "start": "parcel index.html",
-    "build": "npm run clear && parcel build index.html",
-    "clear": "rimraf dist .parcel-cache"
-  },
-  "license": "MIT",
-  "dependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
-  },
-  "devDependencies": {
-    "babel-preset-nano-react-app": "^0.1.0",
-    "parcel": "^2.0.0-alpha.3.2"
-  },
-  "babel": {
-    "presets": [
-      "nano-react-app"
-    ]
-  }
+	"name": "React-Tic-Tac-Toe",
+	"version": "0.1.0",
+	"description": "",
+	"scripts": {
+		"start": "parcel index.html",
+		"build": "npm run clear && parcel build index.html",
+		"clear": "rimraf dist .parcel-cache"
+	},
+	"license": "MIT",
+	"dependencies": {
+		"node-sass": "^6.0.1",
+		"parcel-bundler": "^1.12.5",
+		"react": "^16.13.1",
+		"react-dom": "^16.13.1"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.15.5",
+		"babel-preset-nano-react-app": "^0.1.0",
+		"parcel": "^1.12.4"
+	},
+	"babel": {
+		"presets": [
+			"nano-react-app"
+		]
+	}
 }
